[gd_scene load_steps=15 format=3 uid="uid://2kb00p2l16ij"]

[ext_resource type="Script" path="res://LabelEditor/label_editor.gd" id="1_dh4ot"]
[ext_resource type="PackedScene" uid="uid://cudhfw17vh4h0" path="res://transport_controls.tscn" id="2_2l67k"]
[ext_resource type="AudioStream" uid="uid://c6gibhhnqgmn0" path="res://debug/01.wav" id="2_eguwb"]
[ext_resource type="Shader" path="res://LabelEditor/waveform.gdshader" id="3_7asrn"]
[ext_resource type="Script" path="res://LabelEditor/visualizer_view.gd" id="3_r3tf5"]
[ext_resource type="Shader" path="res://LabelEditor/spectrogram_prerendered.gdshader" id="5_gmqmv"]
[ext_resource type="Script" path="res://LabelEditor/spectrogram_view.gd" id="6_ixfxd"]
[ext_resource type="Script" path="res://LabelEditor/waveform_view.gd" id="6_j2wj6"]
[ext_resource type="Script" path="res://LabelEditor/playhead.gd" id="6_su37s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5msjb"]
shader = ExtResource("3_7asrn")
shader_parameter/waveform_color = Color(1, 1, 1, 1)
shader_parameter/offset = 0.0
shader_parameter/page = 10.0
shader_parameter/sample_rate = null

[sub_resource type="Gradient" id="Gradient_nnnrn"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r3jyk"]
gradient = SubResource("Gradient_nnnrn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tebov"]
shader = ExtResource("5_gmqmv")
shader_parameter/textures_loaded = false
shader_parameter/offset = null
shader_parameter/page = 10.0
shader_parameter/gradient = SubResource("GradientTexture1D_r3jyk")

[sub_resource type="GDScript" id="GDScript_ewok4"]
script/source = "@tool
extends Tree


func _ready():
	var root = get_root()
	#tree.hide_root = true
	var child1 = create_item(root)
	var child2 = create_item(root)
	var subchild1 = create_item(child1)
	child1.set_text(0, \"Child1\")
	child2.set_text(0, \"Child2\")
	subchild1.set_text(0, \"Subchild1\")
"

[node name="LabelEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dh4ot")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_eguwb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
flat = true

[node name="File" type="PopupMenu" parent="MarginContainer/VBoxContainer/MenuBar"]
item_count = 5
item_0/text = "New"
item_0/id = 0
item_1/text = "Save"
item_1/id = 1
item_2/text = "Save As..."
item_2/id = 2
item_3/text = "Open"
item_3/id = 3
item_4/text = "Open Recent..."
item_4/id = 4

[node name="Edit" type="PopupMenu" parent="MarginContainer/VBoxContainer/MenuBar"]

[node name="View" type="PopupMenu" parent="MarginContainer/VBoxContainer/MenuBar"]

[node name="About" type="PopupMenu" parent="MarginContainer/VBoxContainer/MenuBar"]

[node name="TransportControls" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_2l67k")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ToolPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer/MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "A"
flat = true

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer/MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "B"
flat = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer/MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "C"
flat = true

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer/MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "D"
flat = true

[node name="Button6" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanelContainer/MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "E"
flat = true

[node name="ViewPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
clip_children = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ScaleView" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 0

[node name="AmplitudeView" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer/ScaleView"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[node name="FrequencyView" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer/ScaleView"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[node name="PopupMenu" type="PopupMenu" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer/ScaleView/FrequencyView"]
item_count = 3
item_0/text = "Linear"
item_0/id = 0
item_1/text = "Mel Scale"
item_1/id = 1
item_2/text = "Logarithmic"
item_2/id = 2

[node name="VisualizerView" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
script = ExtResource("3_r3tf5")

[node name="WaveformView" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer/VisualizerView"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_5msjb")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
size_flags_vertical = 3
script = ExtResource("6_j2wj6")

[node name="SpectrogramView" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer/VisualizerView"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_tebov")
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ixfxd")

[node name="LabelView" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer/VisualizerView"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Playhead" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer/VisualizerView"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 6.0
grow_vertical = 2
mouse_default_cursor_shape = 10
color = Color(0.368627, 0, 0.227451, 1)
script = ExtResource("6_su37s")

[node name="Meter" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[node name="VisualizerScrollBar" type="HScrollBar" parent="MarginContainer/VBoxContainer/HBoxContainer/ViewPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
max_value = 50.0
page = 10.0

[node name="ListPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ListPanelContainer"]
layout_mode = 2
drag_to_rearrange_enabled = true

[node name="Audio" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ListPanelContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ListPanelContainer/TabContainer/Audio"]
layout_mode = 2
text = "test item in th list"

[node name="Labels" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ListPanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer/HBoxContainer/ListPanelContainer/TabContainer/Labels"]
layout_mode = 2
script = SubResource("GDScript_ewok4")
